methods.slug.SlugSnail.scala.error
Compilation error:
SlugSnail:3: error: not enough arguments for method isFacingTrail: (c: java.awt.Color)Boolean.
Unspecified value parameter c.
  while (isFacingTrail()){
                      ^SlugSnail:13: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
      return true
             ^SlugSnail:13: warning: enclosing method hunt has result type Unit: return value discarded
      return true
      ^