methods.slug.SlugSnail.scala.code
def hunt(c:Color) {
	while (isFacingTrail()){
    if (!estSurBiscuit()){
      forward()
      baisseBrosse()
      leveBrosse()
    }
    else {
      baisseBrosse()
      leveBrosse()
      prendBiscuit()
      return true
    }
  }  
  prendBiscuit()  
 }

def isFacingTrail(c:Color):Boolean = {
  forward()
  var x=getGroundColor()
  while (!estSurBiscuit){
    if (!estFaceMur){
      if (getGroundColor()==c){
        backward() ; return true
      }
      else 
        backward()
        left()
    }
    else 
      left()
    }
  return true
  }